[project]
name = "fastapi-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]
