[project]
name = "fastapi-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.2",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "boto3>=1.43.47",
    "greenlet>=3.5.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
